--- a/coarsening_proposal_generic/Coarsening_Project.tex
+++ b/coarsening_proposal_generic/Coarsening_Project.tex
@@ -132,14 +132,19 @@ Thus, these questions are generic and fundamental in nature, and answering them 
 \section{Research methodology and approach}
 \label{sec:research_methodology}
 
-The interdisciplinary nature of the project links it to  a diverse set of topics in theoretical physics, necessitating interaction between scientists from different disciplines. The researcher (Analabha Roy) has already experienced enough in the field of nonequilibrium many body dynamics, and will compile his techniques with the Host. In addition, the basic framework for solving the quantum problem has been formulated by Profs G. Lozano and L. Arrachea (Universidad de Buenos Aires, Argentina)~\cite{arrachea, arrachea2}, as well as A.A. Aligia (Bariloche Atomic Centre, San Carlos de Bariloche, Argentina). 
+The interdisciplinary nature of the project links it to  a diverse set of topics in theoretical physics, necessitating interaction between scientists from different disciplines. The researcher (Analabha Roy) has already experienced enough in the field of nonequilibrium many body dynamics, and will compile his techniques with his collaborators. In addition, the basic framework for solving the quantum problem has been formulated by Profs G. Lozano and L. Arrachea (Universidad de Buenos Aires, Argentina)~\cite{arrachea, arrachea2}, as well as A.A. Aligia (Bariloche Atomic Centre, San Carlos de Bariloche, Argentina). Other techniques developed by the research groups of A. Silva (SISSA, Trieste, Italy), A. Gambassi~\cite{gambassi,silva1} (SISSA, Trieste, Italy) and E. Demler~\cite{silva2} (Harvard University, USA), applicable to quantum $\phi^4$ systems, as well as systems with long-range interactions, will also be explored.
 
-The project will combine  multiple methods and paradigms in physics to characterize the general aspects of coarsening in non-equilibrium dynamics. Numerical methods to be used will constitute a variety of simulation algorithms for solving  large nonlinear differential equations and exact diagonalization methods; the researcher already has sound experience with these methods. The key methods used will constitute execution in parallel processor grids with an atomic decomposition of the spatial grid, followed by ghost cell updates using the Message Passing Interface for each time step. Time steps can be performed by conventional quadrature and finite element methods, or more modern symplectic integrators appropriate for Hamiltonian systems~\cite{symplectic}.   {The onset of chaos in the coupled LLG problem via period-doubling bifurcation is of particular interest}~\cite{gll:review}, and analytical treatments of period doubling bifurcation via renormalization group techniques and the analysis of Feigenbaum numbers~\cite{hilborn} will be used. The quantum problem will be tackled both analytically and numerically. Analytical techniques in the quantum realm involve the Keldysh theory of nonequilibrium quantum fields as applied to spin chain heterostructures. Starting from the BCS model that is equivalent to that of the spin chains, fermion correlations can be obtained using diagrammatic approximations to the nonequilibrium self-energy, and solving the Dyson equation for complex contour-ordered Keldysh Green's function after mapping it to the real time Green's functions in the RAK formalism using Langreth's theorem and associated rules~\cite{rammer, arrachea}. Different regimes of interest can be identified by associating them with collision rates, and scaling laws for defects obtained  using modified Landau-Zener theory~\cite{fermidyn}, as well as other methods that are more appropriate for 
-impulse quenches (see~\cite{ncnsd2012} and references therein). The physics of dissipation in quantum systems can also be modeled by a second approach using Lindblad operators. The ensuing Kossakowski-Lindblad dynamics  can be simulated numerically with novel approaches to the time evolved block decimation using the Density Matrix Renormalization Group technique, including the implementation of these algorithms in distributed grid computing environments using established parallel-programming paradigms~\cite{white:pdmrg}. The researcher plans to collaborate with Profs D. Rossini and R. Fazio, and combine their expertise in this area to tackle this final part.
+The project will combine  multiple methods and paradigms in physics to characterize the general aspects of coarsening in non-equilibrium dynamics. Numerical methods to be used will constitute a variety of simulation algorithms for solving  large nonlinear differential equations and exact diagonalization methods; the researcher already has sound experience with these methods. The key methods used will constitute execution in parallel processor grids with an atomic decomposition of the spatial grid, followed by ghost cell updates using the Message Passing Interface for each time step. Time steps can be performed by conventional quadrature and finite element methods, or more modern symplectic integrators appropriate for Hamiltonian systems~\cite{symplectic}.   {The onset of chaos in the coupled LLG problem via period-doubling bifurcation is of particular interest}~\cite{gll:review}, and analytical treatments of period doubling bifurcation via renormalization group techniques and the analysis of Feigenbaum numbers~\cite{hilborn} will be used. The quantum problem will be tackled both analytically and numerically. Analytical techniques in the quantum realm involve the Keldysh theory of nonequilibrium quantum fields as applied to spin chain heterostructures. Starting from integrable models, fermion correlations can be obtained using diagrammatic approximations to the nonequilibrium self-energy, and solving the Dyson equation for complex contour-ordered Keldysh Green's function after mapping it to the real time Green's functions in the RAK formalism using Langreth's theorem and associated rules~\cite{rammer, arrachea}. Different regimes of interest can be identified by associating them with collision rates, and scaling laws for defects obtained  using modified Landau-Zener theory~\cite{fermidyn}, as well as other methods that are more appropriate for 
+impulse quenches (see~\cite{ncnsd2012} and references therein). The physics of dissipation in quantum systems can also be modeled by a second approach using Lindblad operators. The ensuing Kossakowski-Lindblad dynamics  can be simulated numerically with novel approaches to the time evolved block decimation using the Density Matrix Renormalization Group technique, including the implementation of these algorithms in distributed grid computing environments using established parallel-programming paradigms~\cite{white:pdmrg}. 
+
+Other analytical techniques for quantum coarsening that will be explored involve the quantisation and analysis of excitations generated by the quantum quench, specifically spin waves~\cite{silva1}. Formulations of spin-wave dynamics via the Holstein-Primakoff transformation will be used, as well as the dynamics of self-consistent field theories in the continuum, analogous to BCS theory out of equilibrium~\cite{gambassi,gambassi:on,silva2}.
+
+\dots (STRING ORDER??? Heterostructures)
+The researcher plans to collaborate with Professor Rosario Fazio of ICTP, Trieste, \dots expertise in this area to tackle this final part.
 
 \section{Relationship to current research in the field}
 \label{sec:originality}
-Nonequilibrium dynamics of many body systems provide deep insights into several complex phenomena in nature, ranging from the behavior around phase transitions in bulk matter, biological systems,  to the creation of the known forces of the universe. In addition, studies in Quantum Annealing indicates that there is a very deep relationship between different aspects of quantum non-equilibrium dynamics and the basic limitations of a quantum computer~\cite{annealing}. Nonequilibrium dynamics of open quantum systems are an important part of quantum optics, quantum measurement theory, quantum statistical mechanics, quantum information science, quantum cosmology and semiclassical approximations~\cite{openq}. 
+Nonequilibrium dynamics of many body systems provide deep insights into several complex phenomena in nature, ranging from the behaviour around phase transitions in bulk matter, biological systems,  to the creation of the known forces of the universe. In addition, studies in Quantum Annealing indicates that there is a very deep relationship between different aspects of quantum non-equilibrium dynamics and the basic limitations of a quantum computer~\cite{annealing}. Nonequilibrium dynamics of open quantum systems are an important part of quantum optics, quantum measurement theory, quantum statistical mechanics, quantum information science, quantum cosmology and semiclassical approximations~\cite{openq}. 
 
 Due to the many implications and interdisciplinary nature of nonequilibrium dynamics, a comprehensive study of the approach to equilibrium in such systems would provide insights into the behavior of several nonequilibrium systems that are actively studied in academia. Also, the LLG equations are related to the dynamics of several important physical systems such as ferromagnets, vortex filaments, moving space curves, $\sigma$-models in particle physics, the spin torque effect in 
 nanoferromagnets in the field of spintronics, and others (see~\cite{gll:review} and references therein). The classical kinetics of systems undergoing critical dynamics or an ordering process is an important problem for condensed matter physicists, since it enhances the generic understanding of phenomena not fully understood, such as pattern formation in nonequilibrium systems and the approach to equilibrium in systems with slow dynamics. In addition, most treatments of open quantum systems out of equilibrium have involved phenomenological approaches using generic structures~\cite{openspin}, restricting  themselves to the equilibrium steady state, and often performed within the linear response regime with small temperature gradients. Therefore, it is desirable to develop alternative approaches designed to treat systems far out of equilibrium while they are coarsening towards steady states. The Keldysh formalism provides such a framework, and a detailed investigation of nonequilibrium dynamics using Keldysh 
@@ -159,7 +164,7 @@ The work plan for the proposed project consists of \textit{work elements} and th
 \item
 Literature search and reading.
 \item
-Enhanced interaction with collaborators: G. Lozano and L. Arrachea (Universidad de Buenos Aires, Argentina), D. Rossini (Scuola Normale Superiore, Pisa, Italy) and R. Fazio (Center for Quantum Technologies, National University of Singapore). Visit institutes of the collaborators, or invite collaborators to host institute for brief enhanced interaction and formulation of problem.
+Enhanced interaction with collaborator Prof. R. Fazio (Abdus Salam International Centre for Theoretical Physics, Trieste, Italy). Visit institute of the collaborators, or invite collaborator to host institute for brief enhanced interaction and formulation of problem.
 \item
 Setting up and exploring techniques I: Numerical methods for $1-d$ classical scalar $\phi^4$ quench dynamics, designing appropriate algorithms in clusters using Message Passing Interfaces for parallelization. Research on numerical techniques for solving coupled Gilbert Landau-Lifshitz equations. Adapt algorithms from previous $\phi^4$ quenches  accordingly.
 \item
@@ -259,6 +264,19 @@ A.F. Volkov, Sh.M. Kogan, Sov. Phys. JETP \textbf{38}(5), 1018 (1974).
 
 \bibitem{arrachea}
 L. Arrachea, G. S. Lozano, and A. A. Aligia, Phys. Rev. B {\bf 80}, 014425 (2009).
+
+\bibitem{gambassi}
+A. Gambassi and P. Calabrese, Eur. Phys. Lett {\bf 95} (2011) 66007.
+
+\bibitem{gambassi:on}
+A. Maraga, A. Chiocchetta, A. Mitra, and A. Gambassi, Phys. Rev. E {\bf 92}, 042151 (2015)
+
+\bibitem{silva1}
+A. Lerose, J. Marino, B. {\v Z}unkovi{\v c}, A. Gambassi, and A. Silva, arXiv:1706.05062 (2017).
+
+\bibitem{silva2}
+P. Smacchia, M. Knap, E. Demler, and A. Silva, Phys. Rev. B {\bf 91}, 205136 (2015).
+
 
 \bibitem{openspin}
 M. Michel, O. Hess,  H. Wichterich and J. Gemmer, Phys. Rev. B {\bf 77}, 104303 (2008) 
